--- a/index.html
+++ b/index.html
@@ -1,86 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.1/papaparse.min.js"
-    integrity="sha512-EbdJQSugx0nVWrtyK3JdQQ/03mS3Q1UiAhRtErbwl1YL/+e2hZdlIcSURxxh7WXHTzn83sjlh2rysACoJGfb6g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="./index.js"></script>
+  <title>Modeli in odlocitveni sistemi</title>
 </head>
-
-<body class="my-5 text-capitalize">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="mb-3">
-          <input class="form-control" type="file" id="file" name="file">
-        </div>
-      </div>
-      <div class="col-md-4">
-        <button type="submit" onclick="fetchData()" class="btn bg-dark text-white w-100">Upload file</button>
-      </div>
-    </div>
-  </div>
-  <div id="invisibleContainer" class="invisible">
-    <div class="container mb-5">
-      <h2>Podatki</h2>
-      <hr>
-      <div class="table-responsive">
-        <table class="table ">
-          <thead id="headPlaceholder"></thead>
-          <tbody id="bodyPlaceholder"></tbody>
-        </table>
-      </div>
-    </div>
-    <div class="container">
-      <h2>Rezultati obdelave</h2>
-      <hr>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="d-flex flex-column h-100 justify-content-between">
-            <div>
-              <h4>Optimist</h4>
-              <p id="optimistResult"></p>
-            </div>
-            <div>
-              <h4>Pesimist</h4>
-              <p id="pessimistResult"></p>
-            </div>
-            <div>
-              <h4>Laplace</h4>
-              <p id="laplaceResult"></p>
-            </div>
-            <div>
-              <h4>Savage</h4>
-              <p id="savageResult"></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-9">
-          <h4>Hurwizc</h4>
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr id="hurwiczHeader"></tr>
-              </thead>
-              <tbody id="hurwiczResults"></tbody>
-            </table>
-          </div>
-        </div>
-        <div id="chart"></div>
-      </div>
-    </div>
-  </div>
+<body>
+  <a href="./vaja_1/static/index.html">Vaja 1</a>
 </body>
-
 </html>
