--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modeli in odlocitveni sistemi</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
+    rel="stylesheet">
+  <link href="./style/style.css" rel="stylesheet">
 </head>
+
 <body>
-  <a href="./vaja_1/static/index.html">Vaja 1</a>
+  <header>
+    <h1 class="p-3">Modeli in odločitveni sistemi - Vsebina</h1>
+    <hr>
+  </header>
+  <div id="main">
+    <div class="container">
+      <div class="pages">
+        <div class="page-container">
+          <a href="./vaja_1/static/index.html">
+            Vaja 1
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <h4>Filip Joksović, Fakulteta za Elektrotehniko, Računalništvo in Informatiko, Maribor,2022</h4>
+  </footer>
 </body>
 </html>
